[project]
name = "aimedic-pkg"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert-Gomez-AI",email = "robertgomez.datascience@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "aimedic_pkg", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
